[package]
name = "cloudtune-tauri"
version = "0.1.0"
description = "CloudTune desktop player backed by 189CloudPC APIs"
edition = "2024"

[lib]
name = "cloudtune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
hex = "0.4"
hmac = "0.12"
httpdate = "1.0"
rand = "0.8"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["charset", "cookies", "gzip", "http2", "json", "macos-system-configuration", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tauri = { version = "2.10.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2.8.0"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
url = "2.5"
uuid = { version = "1.23.0", features = ["v4"] }
quick-xml = { version = "0.38", features = ["serialize"] }
rfd = "0.15"
open = "5.3.3"
axum = "0.8.6"
bytes = "1.10"
tokio-stream = "0.1"
mime_guess = "2.0"
lofty = "0.23.3"
